k8sprjs/headlamp/resources/headlamp.ingressroute.traefik.yaml
# HTTPS ingress for Headlamp
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: headlamp
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`headlamp.homelab.cloud`)
    kind: Rule
    services:
    - name: headlamp
      kind: Service
      port: 80
  tls:
    secretName: headlamp.homelab.cloud-tls
